--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="navbar-header">
           <div class="navbar-brand">
             SandiegoJS Code Challenge 10/27/2014
+            <p>
+              This can be used as a template, a starting point for simple project for students.
+            </p>
           </div>
         </div>
       </div>
